@@ -1452,6 +1452,7 @@ The text for an official release would continue like ...
             <arg value="--exclude"/>
             <arg value="test_gc"/> <!-- intermittently fails/hangs (xenial) -->
             <arg value="test_mailbox"/>
+            <arg value="test_py_compile"/> <!-- test_relative_path (on osx) -->
             <arg value="test_select_new"/>
             <arg value="test_smtpnet"/>
             <arg value="test_socket"/>
@@ -1470,7 +1471,9 @@ The text for an official release would continue like ...
             <arg value="network,subprocess"/>
             <!-- Exclude particular tests troublesome on the build bots -->
             <arg value="--exclude"/>
+            <arg value="test_jython_launcher"/> <!-- (on git bash) -->
             <arg value="test_mailbox"/>
+            <arg value="test_os_jy"/> <!-- locale command (on git bash) -->
             <arg value="test_select_new"/>
             <arg value="test_smtpnet"/>
             <arg value="test_socket"/>
